# rust-live-bootcamp-project

./: README.md  REDIS_LOCAL_SETUP.md  compose.override.yml  compose.yml
.agents/gitcommit/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: prod.yml
app-service/assets/: app.js
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/assets/: app.js  index.html
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: mod.rs
auth-service/src/models/: data_store.rs  email.rs  email_client.rs  error.rs  login.rs  mod.rs  password.rs  signup.rs  user.rs  verify_2fa.rs  verify_token.rs
auth-service/src/routes/: cleanup.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: email_client.rs  hashmap_2fa_code_store.rs  hashmap_banned_token_store.rs  hashmap_user_store.rs  mod.rs  postmark_email_client.rs  redis_2fa_code_store.rs  redis_banner_token_store.rs
auth-service/src/services/data_stores/: db.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: cleanup.rs  helpers.rs  login.rs  logout.rs  main.rs  signup.rs  verify_2fa.rs  verify_token.rs
